--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -418,7 +418,7 @@ body {
 .card .info {
 	width: calc(100% - 40px);
 	height: calc(40% - 80px);
-	padding: 40px 20px;
+	padding: 30px 10px 30px 10px;
 	color: #9e9e9e;
 }
 
@@ -448,3 +448,17 @@ body {
   margin: 4px 0px;
   cursor: pointer;
 }
+
+input {
+  padding: 6px 6px;
+  /* width: 300px; */
+  /* margin: 5px; */
+  /* width: 130px; */
+  /* margin-left: 30px; */
+  font-size: 14px;
+}
+
+#result-user {
+  padding: 8px 0px;
+}
+
