--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -1,10 +1,10 @@
-body {
+/* body {
   background-color: #45b98f;
   margin: 0;
   height: 100%;
   font-family: "Open Sans", Helvetica, sans-serif;
   font-weight: 500;
-}
+} */
 
 #header {
   background-color: #5f5cf1;
@@ -40,15 +40,15 @@ body {
   background-color: #212121;
 }
 
-.indicator {
-  cursor: pointer;
-}
-
+/* .indicator { */
+  /* cursor: pointer; */
+/* } */
+/* 
 .card {
   background-color: #ffffff;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   border-radius: 5px;
-}
+} */
 
 .reference {
   position: absolute;
@@ -65,119 +65,17 @@ body {
 
 .card {
   position: relative;
-  width: 300px;
-  height: 400px;
-  margin: 50px calc((100vh - 400px) / 2) auto;
+  width: 320px;
+  height: 450px;
+  background-color: #ffffff;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  border-radius: 5px;
+  margin: auto;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.card input[type="checkbox"].card-visitors-indicator {
-  display: none;
-}
-
-.card
-  input[type="checkbox"].card-visitors-indicator:checked
-  + .header
-  label.indicator {
-  top: 30%;
-  right: calc(50% - 25px);
-  margin: calc(-30% - 25px) calc(50% - 25px) 0 0;
-  background-color: transparent;
-  -webkit-transition: top 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s,
-    right 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s,
-    background-color 0s cubic-bezier(0.4, 0, 0.2, 1) 0.6s,
-    margin 0s cubic-bezier(0.4, 0, 0.2, 1) 0.9s;
-  -moz-transition: top 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s,
-    right 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s,
-    background-color 0s cubic-bezier(0.4, 0, 0.2, 1) 0.6s,
-    margin 0s cubic-bezier(0.4, 0, 0.2, 1) 0.9s;
-  -o-transition: top 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s,
-    right 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s,
-    background-color 0s cubic-bezier(0.4, 0, 0.2, 1) 0.6s,
-    margin 0s cubic-bezier(0.4, 0, 0.2, 1) 0.9s;
-  -ms-transition: top 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s,
-    right 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s,
-    background-color 0s cubic-bezier(0.4, 0, 0.2, 1) 0.6s,
-    margin 0s cubic-bezier(0.4, 0, 0.2, 1) 0.9s;
-  transition: top 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s,
-    right 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s,
-    background-color 0s cubic-bezier(0.4, 0, 0.2, 1) 0.6s,
-    margin 0s cubic-bezier(0.4, 0, 0.2, 1) 0.9s;
-}
-
-.card
-  input[type="checkbox"].card-visitors-indicator:checked
-  + .header
-  label.indicator
-  .open {
-  opacity: 0;
-  -webkit-transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0.2s;
-  -moz-transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0.2s;
-  -o-transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0.2s;
-  -ms-transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0.2s;
-  transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0.2s;
-}
-
-.card
-  input[type="checkbox"].card-visitors-indicator:checked
-  + .header
-  label.indicator
-  .close {
-  transform: scale(1);
-  -webkit-transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1) 0.9s;
-  -moz-transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1) 0.9s;
-  -o-transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1) 0.9s;
-  -ms-transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1) 0.9s;
-  transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1) 0.9s;
-}
-
-.card
-  input[type="checkbox"].card-visitors-indicator:checked
-  + .header
-  .content
-  .data {
-  opacity: 1;
-  -webkit-transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.6s;
-  -moz-transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.6s;
-  -o-transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.6s;
-  -ms-transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.6s;
-  transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.6s;
-}
-
-.card
-  input[type="checkbox"].card-visitors-indicator:checked
-  + .header
-  .content
-  .data
-  .graph
-  .vertical
-  .day
-  .line-container {
-  max-height: 80%;
-  -webkit-transition: max-height 0.6s cubic-bezier(0.4, 0, 0.2, 1) 0.9s;
-  -moz-transition: max-height 0.6s cubic-bezier(0.4, 0, 0.2, 1) 0.9s;
-  -o-transition: max-height 0.6s cubic-bezier(0.4, 0, 0.2, 1) 0.9s;
-  -ms-transition: max-height 0.6s cubic-bezier(0.4, 0, 0.2, 1) 0.9s;
-  transition: max-height 0.6s cubic-bezier(0.4, 0, 0.2, 1) 0.9s;
-}
-
-.card
-  input[type="checkbox"].card-visitors-indicator:checked
-  + .header
-  .content
-  .float {
-  opacity: 1;
-  transform: scale(10);
-  -webkit-transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.3s,
-    opacity 0s cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
-  -moz-transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.3s,
-    opacity 0s cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
-  -o-transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.3s,
-    opacity 0s cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
-  -ms-transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.3s,
-    opacity 0s cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
-  transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.3s,
-    opacity 0s cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
-}
 
 .card .header {
   width: 100%;
@@ -187,14 +85,14 @@ body {
 
 .card .header label.indicator {
   position: absolute;
-  z-index: 1;
-  width: 50px;
-  height: 50px;
-  top: calc(60% - 25px);
-  right: 20px;
+  z-index: 1; 
+  width: 40px;
+  height: 40px;
+  top: calc(60% - 20px);
+  right: 10px;
   margin: 0;
   border-radius: 100%;
-  background-color: #ff9800;
+  /* background-color: #ff9800; */
   -webkit-transition: top 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.3s,
     right 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.3s,
     background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s,
@@ -219,7 +117,7 @@ body {
 
 .card .header label.indicator .open {
   position: absolute;
-  margin: 11.5px 16px;
+  /* margin: 11.5px 16px; */
   opacity: 1;
   -webkit-transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.6s;
   -moz-transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.6s;
@@ -229,7 +127,7 @@ body {
 }
 
 .card .header label.indicator .close {
-  margin: 12.5px 17.5px;
+  /* margin: 12.5px 17.5px; */
   transform: scale(0);
   -webkit-transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1) 0s;
   -moz-transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1) 0s;
@@ -263,109 +161,6 @@ body {
   transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s;
 }
 
-.card .header .content .data .top {
-  width: 100%;
-  height: 40%;
-}
-
-.card .header .content .data .top .title {
-  width: 100%;
-}
-
-.card .header .content .data .graph {
-  position: relative;
-  width: calc(100% - 40px);
-  height: 60%;
-  margin: 0 20px 20px 20px;
-}
-
-.card .header .content .data .graph .horizontal {
-  width: 100%;
-  height: 100%;
-}
-
-.card .header .content .data .graph .horizontal div {
-  height: 20%;
-}
-
-.card .header .content .data .graph .horizontal div hr {
-  border: 1px solid #ffffff;
-  opacity: 0.5;
-}
-
-.card .header .content .data .graph .horizontal div p {
-  opacity: 0.5;
-}
-
-.card .header .content .data .graph .vertical {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -moz-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -moz-box-direction: normal;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  position: absolute;
-  width: 90%;
-  height: 100%;
-  top: 0;
-  margin-left: 10%;
-}
-
-.card .header .content .data .graph .vertical .day {
-  position: relative;
-  width: calc(100% / 14);
-  height: 100%;
-}
-
-.card .header .content .data .graph .vertical .day .line-container {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -moz-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -moz-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  justify-content: flex-end;
-  position: absolute;
-  width: 2px;
-  height: 80%;
-  max-height: 0;
-  bottom: 20%;
-  margin: 0 calc((100% - 2px) / 2);
-  -webkit-transition: max-height 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-  -moz-transition: max-height 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-  -o-transition: max-height 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-  -ms-transition: max-height 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-  transition: max-height 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-}
-
-.card .header .content .data .graph .vertical .day .line-container .line {
-  width: 100%;
-  background-color: #ffffff;
-}
-
-.card .header .content .data .graph .vertical .day p {
-  position: absolute;
-  height: 20%;
-  bottom: 0;
-  opacity: 0.5;
-}
-
-.card .header .content .data .graph .vertical .day .hidden {
-  opacity: 0;
-}
-
 .card .header .content .title {
   margin-top: 15px;
   font-size: 25px;
@@ -373,50 +168,11 @@ body {
   text-align: center;
 }
 
-.card .header .content .date {
-  width: 100%;
-  opacity: 0.5;
-  text-align: center;
-}
-
-.card .header .content .float {
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  top: 50%;
-  right: calc(50% - 25px);
-  opacity: 0;
-  border-radius: 100%;
-  background-color: #ff9800;
-  -webkit-transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s,
-    opacity 0s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-  -moz-transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s,
-    opacity 0s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-  -o-transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s,
-    opacity 0s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-  -ms-transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s,
-    opacity 0s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-  transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0s,
-    opacity 0s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-}
-
 .card .info {
   width: calc(100% - 40px);
   height: calc(40% - 80px);
   padding: 30px 10px 30px 10px;
   color: #9e9e9e;
-}
-
-.card .info .counter {
-  margin-top: 8px;
-  color: #212121;
-  font-size: 25px;
-  font-weight: 400;
-  line-height: 40px;
-}
-
-.card .info .counter .unit {
-  font-size: 15px;
 }
 
 .btn {
@@ -453,17 +209,17 @@ input {
   /* text-align: center; */
 }
 
-/* body, html {
-	background: #efefef;
+html {
+	/* background: #efefef; */
 	display: -webkit-box;
 	display: flex;
 	-webkit-box-pack: center;
 			justify-content: center;
 	-webkit-box-align: center;
 			align-items: center;
-	min-height: 100%;
-	z-index: -1;
-  } */
+	/* min-height: 100%; */
+	/* z-index: -1; */
+  }
 
 .btn-toggle {
   border: 1px solid #aaa;
