add more features

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div id="header">Vocabalulary Learning Tool</div>
+    <div id="header">Suhi's Vocab Learning Tool</div>
     <div id="content">
         <div class="card">
             <div class="header">
